# msci-wiki-analytics

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: config.py  exceptions.py  logging.py  main.py
src/models/: schemas.py
src/services/: frequency.py  wiki_client.py  wiki_html_client.py  wikipedia.py
tests/: test_api.py  test_frequency.py  test_wiki_client.py  test_wiki_html_client.py  test_wikipedia.py
