[project]
name = "msci-wiki-analytics"
version = "0.1.0"
description = "MSCI Wiki analytics"
authors = [
    {name = "auishik",email = "auishikbarua@gmail.com"}
]
license = {text = "UNLICENSE"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.4,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ["py312"]


[tool.isort]
profile = "black"
line_length = 88


[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"
